plugins {
    id 'org.springframework.boot' version '3.5.9' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
    group = 'com.simulacert'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

description = "simulacert Project ROOT Module"

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.5.9"
        }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.46'
        annotationProcessor 'org.projectlombok:lombok:1.18.46'

        implementation 'org.mapstruct:mapstruct:1.6.3'
        implementation 'com.github.f4b6a3:uuid-creator:6.1.1'
        implementation 'org.apache.commons:commons-lang3:3.20.0'

        // Spring Framework Dependencies
        implementation 'org.springframework:spring-context'
        implementation 'org.springframework:spring-tx:6.2.1'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

        annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
        annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.junit.jupiter:junit-jupiter'

        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
